--- a/css/reset.css
+++ b/css/reset.css
@@ -16,7 +16,9 @@ li {
 }
 
 a {
-    text-decoration: none; color: white;
+    text-decoration: none;
 }
 
-.container {max-width: 1380px; }
+.container {max-width: 1380px;}
+
+button {cursor: pointer;}
