--- a/css/reset.css
+++ b/css/reset.css
@@ -21,9 +21,9 @@ a {
     text-decoration: none;
 }
  
-.container {max-width: 1380px;
+/* .container {max-width: 1380px;
    
-    margin:0 45px auto;}
+    margin:0 45px auto;} */
 
 button {cursor: pointer;}
 
